# Tripwire

Networking/: Makefile  scripts-arduino-execute.sh  scripts-server-execute.sh
Networking/PI Server/: Makefile
Networking/PI Server/src/: TripwireSettings.cpp  TripwireSettings.h  main.cpp
Networking/client and GUI/: CMakeLists.txt  Makefile  imgui.ini
Networking/client and GUI/cmake bin/: CMakeCache.txt  Makefile  cmake_install.cmake
Networking/client and GUI/src/: Alert.cpp  Alert.h  image.cpp  image.h  main.cpp
Networking/client and GUI/src/Networking/: Connection.cpp  Connection.h  Messages.cpp  Messages.h
Networking/client and GUI/src/Window/: Gui.cpp  Gui.h  SettingsUI.cpp  SettingsUI.h  TripwireUI.cpp  TripwireUI.h
modules/: platformio.ini
modules/src/: main.cpp
